Filltro de año de mayor a menor y viceversa