@@ -1,8 +1,10 @@
 package com.example.ServiApp.controller;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -222,9 +224,9 @@ public class PeriodoController {
         }
 
 
-        @GetMapping("/api/consumos/{tipoServicio}")
+        @GetMapping("/api/consumos/{tipoServicio}/{orden}")
         @ResponseBody
-        public Map<String, Object> obtenerConsumosPorTipoServicio(@PathVariable String tipoServicio, HttpSession session) {
+        public Map<String, Object> obtenerConsumosPorTipoServicio(@PathVariable String tipoServicio, @PathVariable String orden, HttpSession session) {
             UsuarioModel usuarioLogueado = (UsuarioModel) session.getAttribute("usuarioLogueado");
             if (usuarioLogueado == null) {
                 throw new IllegalArgumentException("Usuario no logueado.");
@@ -232,50 +234,82 @@ public class PeriodoController {
         
             List<ServicioModel> servicios = servicioService.obtenerServiciosPorUsuario(usuarioLogueado);
         
-            // Promedios por tipo de servicio por habitante
+            // Mapa de promedios por tipo de servicio por habitante
             final Map<String, Float> promediosPorHabitante = Map.of(
                 "agua", 4.3f,
                 "energía", 80.7f,
                 "gas", 3.9f
             );
         
-            
+            // Filtrar y obtener periodos de servicio
             List<PeriodoModel> periodos = servicios.stream()
                     .filter(servicio -> servicio.getTipo_servicio().equalsIgnoreCase(tipoServicio))
                     .flatMap(servicio -> periodoService.obtenerPeriodosPorServicios(servicio).stream()
                         .map(periodo -> {
-                            
+                            // Adjuntar info de habitantes
                             periodo.getServicio().setHabitantes(servicio.getHabitantes());
                             return periodo;
                         }))
-                    .toList();
+                    .collect(Collectors.toList());
         
+            // Crear un mapa mutable para los meses
+            Map<String, Integer> meses = new HashMap<>();
+            meses.put("Enero", 1);
+            meses.put("Febrero", 2);
+            meses.put("Marzo", 3);
+            meses.put("Abril", 4);
+            meses.put("Mayo", 5);
+            meses.put("Junio", 6);
+            meses.put("Julio", 7);
+            meses.put("Agosto", 8);
+            meses.put("Septiembre", 9);
+            meses.put("Octubre", 10);
+            meses.put("Noviembre", 11);
+            meses.put("Diciembre", 12);
+        
+            // Ordenar los períodos por año y mes
+            periodos.sort((p1, p2) -> {
+                // Comparar primero por año
+                int compareAno = Integer.compare(p1.getAno(), p2.getAno());
+                if (compareAno != 0) {
+                    return compareAno;  // Si los años son diferentes, devolver la comparación de años
+                } else {
+                    // Si los años son iguales, comparar por mes
+                    return Integer.compare(meses.get(p1.getMes()), meses.get(p2.getMes()));
+                }
+            });
+        
+            // Si el parámetro 'orden' es 'desc', invertir el orden de los períodos
+            if ("desc".equalsIgnoreCase(orden)) {
+                Collections.reverse(periodos);
+            }
+        
+            // Generar las listas de labels y consumos por habitante
             List<String> labels = periodos.stream()
                     .map(p -> p.getMes() + " " + p.getAno())
-                    .toList();
+                    .collect(Collectors.toList());
         
             List<Float> consumosPorHabitante = periodos.stream()
                     .map(p -> {
                         long habitantes = p.getServicio().getHabitantes();
                         return habitantes > 0 ? p.getConsumo() / habitantes : 0f;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
         
+            // Obtener el promedio por habitante para el servicio
             float promedioCartagenaPorHabitante = promediosPorHabitante.getOrDefault(tipoServicio.toLowerCase(), 0f);
         
-            
-            List<Long> habitantesPorPeriodo = periodos.stream()
-                    .map(p -> p.getServicio().getHabitantes())
-                    .toList();
-        
+            // Crear la respuesta
             Map<String, Object> response = new HashMap<>();
             response.put("labels", labels);
             response.put("consumosPorHabitante", consumosPorHabitante);
             response.put("promedioPorHabitante", promedioCartagenaPorHabitante);
-            response.put("habitantes", habitantesPorPeriodo);  
         
             return response;
         }
+        
+
+
          
 
 
